Atualização da soma total da tabela

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <script src="./js/calculadora.js" type="module"></script>
     <script src="./js/despesas/tabela/criaTabela.js" type="module"></script>
     <script src="./js/despesas/tabela/deletaDespesa.js" type="module"></script>
-
+    <script src="./js/despesas/tabela/somaDespesas.js" type="module"></script>
 
 </body>
 </html>
