--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="/assets/css/base/variaveis.css" rel="stylesheet">
-    <link href="/assets/css/base/base.css" rel="stylesheet">
-    <link href="/assets/css/componentes/cabecalho.css" rel="stylesheet">
-    <link href="/assets/css/componentes/corpo.css" rel="stylesheet">
-    <link href="/assets/css/componentes/secao.css" rel="stylesheet">
-    <link href="/assets/css/componentes/formulario.css" rel="stylesheet">
-    <link href="/assets/css/componentes/tabela.css" rel="stylesheet">
-    <link href="/assets/css/componentes/botao.css" rel="stylesheet">
-    <link href="/assets/css/componentes/resultado.css" rel="stylesheet">
-    <link href="/assets/css/componentes/rodape.css" rel="stylesheet">
-    <link href="/assets/css/componentes/menu.css" rel="stylesheet">
+    <link href="assets/css/base/variaveis.css" rel="stylesheet">
+    <link href="assets/css/base/base.css" rel="stylesheet">
+    <link href="assets/css/componentes/cabecalho.css" rel="stylesheet">
+    <link href="assets/css/componentes/corpo.css" rel="stylesheet">
+    <link href="assets/css/componentes/secao.css" rel="stylesheet">
+    <link href="assets/css/componentes/formulario.css" rel="stylesheet">
+    <link href="assets/css/componentes/tabela.css" rel="stylesheet">
+    <link href="assets/css/componentes/botao.css" rel="stylesheet">
+    <link href="assets/css/componentes/resultado.css" rel="stylesheet">
+    <link href="assets/css/componentes/rodape.css" rel="stylesheet">
+    <link href="assets/css/componentes/menu.css" rel="stylesheet">
 </head>
 
 <body class="corpo">
